[package]
name = "flask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
nix = "0.25"
clap = "4.5.4"
clap_derive = "4.5.3"
chrono = "0.4.37"
